k3s/client-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - andersgallery.dev
      secretName: andersgallery-dev-tls
  rules:
    - host: andersgallery.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 80
          - path: /api/
            pathType: ImplementationSpecific
            backend:
              service:
                name: server-service
                port:
                  number: 4002
